--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -1,82 +1,29 @@
-<!doctype html>
-<html lang="de">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Verträge</title>
-  <link rel="stylesheet" href="../../styles/base.css">
-</head>
-<body>
-  <div class="card">
-    <h2>Verträge</h2>
-    <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:12px">
-      <div><label class="label">Versicherer</label><input class="input" id="versicherer"></div>
-      <div><label class="label">Police-Nr.</label><input class="input" id="police"></div>
-      <div><label class="label">Sparte(n) (Komma)</label><input class="input" id="sparten" placeholder="BHV, Inhalt"></div>
-      <div><label class="label">Beginn</label><input class="input" id="beginn" type="date"></div>
-      <div><label class="label">Jahresbeitrag (Brutto)</label><input class="input" id="beitrag" type="number" step="0.01"></div>
-      <div><label class="label">Zahlweise</label>
-        <select id="zahlweise" class="input">
-          <option>jährlich</option><option>halbjährlich</option><option>vierteljährlich</option><option>monatlich</option>
-        </select>
-      </div>
-    </div>
-    <div style="margin-top:12px;display:flex;gap:8px">
-      <button class="btn" id="add">Hinzufügen</button>
-      <button class="btn outline" id="export">Export</button>
-      <input type="file" id="import" style="display:none" accept=".json">
-      <button class="btn outline" id="importBtn">Import</button>
-    </div>
-    <div class="card" style="margin-top:12px">
-      <table id="tbl"><thead><tr><th>Versicherer</th><th>Police</th><th>Sparte</th><th>Beitrag</th><th>Aktion</th></tr></thead><tbody></tbody></table>
-    </div>
-  </div>
-  <script type="module">
-    import { saveContractToCloud, loadContractsFromCloud, deleteContractFromCloud } from '../../scripts/firebase.js';
-    const KEY='dfs.contracts';
-    const $=id=>document.getElementById(id);
-    const fmt = (n)=> (Number(n)||0).toLocaleString('de-DE',{style:'currency',currency:'EUR'});
-    const row=(c)=>`<tr><td>${c.versicherer||''}</td><td>${c.policeNr||''}</td><td>${(c.sparten||[]).join(', ')}</td><td>${fmt(c.jahresbeitragBrutto||0)}</td><td><button data-id="${c.id}" class="btn outline del">Löschen</button></td></tr>`;
-    const render=()=>{
-      const list=JSON.parse(localStorage.getItem(KEY)||'[]');
-      document.querySelector('#tbl tbody').innerHTML = list.map(row).join('');
-      document.querySelectorAll('.del').forEach(b=>b.onclick=async()=>{
-        const id=b.getAttribute('data-id');
-        const next=list.filter(x=>x.id!==id);
-        localStorage.setItem(KEY, JSON.stringify(next));
-        try{ await deleteContractFromCloud(id);}catch{}
-        render();
-      });
-    };
-    render();
-    $('add').onclick=async()=>{
-      const c = {
-        id: crypto.randomUUID? crypto.randomUUID(): `${Date.now()}-${Math.random().toString(36).slice(2)}`,
-        versicherer: $('versicherer').value,
-        policeNr: $('police').value,
-        sparten: $('sparten').value ? $('sparten').value.split(',').map(s=>s.trim()) : [],
-        beginn: $('beginn').value||undefined,
-        zahlweise: $('zahlweise').value,
-        jahresbeitragBrutto: Number($('beitrag').value)||0,
-        gefahren: [], empfehlungen: [], createdAt: new Date().toISOString(), updatedAt: new Date().toISOString()
-      };
-      const list=JSON.parse(localStorage.getItem(KEY)||'[]'); list.push(c); localStorage.setItem(KEY, JSON.stringify(list));
-      try{ await saveContractToCloud(c);}catch(e){ console.warn('Cloud save failed', e); }
-      render();
-    };
-    $('export').onclick=()=>{
-      const data=localStorage.getItem(KEY)||'[]';
-      const blob=new Blob([data],{type:'application/json'});
-      const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='dfs_contracts.json'; a.click();
-    };
-    $('importBtn').onclick=()=>$('import').click();
-    $('import').onchange=(e)=>{
-      const f=e.target.files[0]; if(!f) return;
-      const r=new FileReader(); r.onload=()=>{
-        try{ const arr=JSON.parse(r.result||'[]'); if(Array.isArray(arr)){ localStorage.setItem(KEY, JSON.stringify(arr)); render(); alert('Import erfolgreich'); } }
-        catch{ alert('Import fehlgeschlagen'); }
-      }; r.readAsText(f);
-    };
-  </script>
-</body>
-</html>
+<!doctype html><html lang="de"><head><meta charset="utf-8"><link rel="stylesheet" href="../../styles/base.css"><title>Verträge</title></head>
+<body><div class="card"><h2>Verträge</h2>
+<div style="display:grid;grid-template-columns:repeat(3,1fr);gap:12px">
+  <div><label class="label">Versicherer</label><input class="input" id="versicherer"></div>
+  <div><label class="label">Police-Nr.</label><input class="input" id="police"></div>
+  <div><label class="label">Sparte(n) (Komma)</label><input class="input" id="sparten" placeholder="BHV, Inhalt"></div>
+  <div><label class="label">Beginn</label><input class="input" id="beginn" type="date"></div>
+  <div><label class="label">Jahresbeitrag (Brutto)</label><input class="input" id="beitrag" type="number" step="0.01"></div>
+  <div><label class="label">Zahlweise</label><select id="zahlweise" class="input"><option>jährlich</option><option>halbjährlich</option><option>vierteljährlich</option><option>monatlich</option></select></div>
+</div>
+<div style="margin-top:12px;display:flex;gap:8px">
+  <button class="btn" id="add">Hinzufügen</button>
+  <button class="btn outline" id="export">Export</button>
+  <input type="file" id="import" accept=".json" style="display:none">
+  <button class="btn outline" id="importBtn">Import</button>
+</div>
+<div class="card" style="margin-top:12px"><table id="tbl"><thead><tr><th>Versicherer</th><th>Police</th><th>Sparte</th><th>Beitrag</th><th>Aktion</th></tr></thead><tbody></tbody></table></div>
+</div>
+<script type="module">
+import { saveContractToCloud, deleteContractFromCloud } from '../../scripts/firebase.js';
+const KEY='dfs.contracts'; const $=id=>document.getElementById(id); const fmt=n=>(Number(n)||0).toLocaleString('de-DE',{style:'currency',currency:'EUR'});
+const row=c=>`<tr><td>${c.versicherer||''}</td><td>${c.policeNr||''}</td><td>${(c.sparten||[]).join(', ')}</td><td>${fmt(c.jahresbeitragBrutto||0)}</td><td><button class="btn outline del" data-id="${c.id}">Löschen</button></td></tr>`;
+function render(){ const list=JSON.parse(localStorage.getItem(KEY)||'[]'); document.querySelector('#tbl tbody').innerHTML=list.map(row).join(''); document.querySelectorAll('.del').forEach(b=>b.onclick=async()=>{ const id=b.getAttribute('data-id'); const next=list.filter(x=>x.id!==id); localStorage.setItem(KEY, JSON.stringify(next)); try{ await deleteContractFromCloud(id);}catch{} render();}); }
+render();
+document.getElementById('add').onclick=async()=>{ const c={ id: (crypto.randomUUID?crypto.randomUUID():`${Date.now()}-${Math.random().toString(36).slice(2)}`), versicherer:$('#versicherer').value, policeNr:$('#police').value, sparten: $('#sparten').value? $('#sparten').value.split(',').map(s=>s.trim()):[], beginn:$('#beginn').value||undefined, zahlweise:$('#zahlweise').value, jahresbeitragBrutto:Number($('#beitrag').value)||0, gefahren:[], empfehlungen:[], createdAt:new Date().toISOString(), updatedAt:new Date().toISOString() }; const list=JSON.parse(localStorage.getItem(KEY)||'[]'); list.push(c); localStorage.setItem(KEY, JSON.stringify(list)); try{ await saveContractToCloud(c);}catch(e){ console.warn('Cloud save failed', e);} render(); };
+document.getElementById('export').onclick=()=>{ const data=localStorage.getItem(KEY)||'[]'; const blob=new Blob([data],{type:'application/json'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='dfs_contracts.json'; a.click(); };
+document.getElementById('importBtn').onclick=()=>document.getElementById('import').click();
+document.getElementById('import').onchange=(e)=>{ const f=e.target.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{ try{ const arr=JSON.parse(r.result||'[]'); if(Array.isArray(arr)){ localStorage.setItem(KEY, JSON.stringify(arr)); render(); alert('Import erfolgreich'); } }catch{ alert('Import fehlgeschlagen'); } }; r.readAsText(f); };
+</script></body></html>
