--- a/index.html
+++ b/index.html
@@ -1,52 +1,104 @@
 <!doctype html>
-<html lang="de"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>DFS Versicherungsanalyse</title>
-<link rel="icon" href="./favicon.ico"><link rel="stylesheet" href="./styles/base.css">
-</head><body>
-<div class="shell">
-  <aside class="sidebar">
-    <div class="logo"><img src="./assets/logo.png" width="24" height="24" alt="DFS"><strong>DFS Analyse</strong></div>
-    <nav class="nav">
-      <a href="#" class="active" data-target="./modules/dashboard/index.html">Dashboard</a>
-      <a href="#" data-target="./modules/customer/index.html">Kunden</a>
-      <a href="#" data-target="./modules/contracts/index.html">Verträge</a>
-      <a href="#" data-target="./modules/analysis/index.html">Analyse</a>
-      <a href="#" data-target="./modules/print/index.html">PDF-Export</a>
-    </nav>
-    <div style="margin-top:auto"><small style="color:var(--muted)">Version: <span id="ver">20250829.1000</span></small></div>
-  </aside>
-  <main class="main">
-    <div class="topbar">
-      <div style="display:flex;gap:8px">
-        <button class="btn" id="btn-save-cloud">In Cloud speichern</button>
-        <button class="btn outline" id="btn-load-cloud">Aus Cloud laden</button>
+<html lang="de">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>DFS Versicherungsanalyse</title>
+  <link rel="icon" href="./favicon.ico">
+  <link rel="stylesheet" href="./styles/base.css">
+</head>
+<body>
+  <div class="shell">
+    <aside class="sidebar">
+      <div class="logo">
+        <img src="./assets/logo.png" alt="DFS" width="24" height="24">
+        <strong>DFS Analyse</strong>
       </div>
-      <div><button class="btn outline" onclick="window.print()">Als PDF speichern</button></div>
-    </div>
-    <iframe id="content" src="./modules/dashboard/index.html"></iframe>
-  </main>
-</div>
-<div id="toast" class="toast">OK</div>
-<script type="module" src="./scripts/firebaseClient.js"></script>
-<script type="module" src="./scripts/firebase.js"></script>
-<script type="module">
-import { saveAllDFSBlobs, loadAllDFSBlobs } from './scripts/firebase.js';
-const iframe=document.getElementById('content'); const links=document.querySelectorAll('.nav a');
-links.forEach(a=>a.addEventListener('click',e=>{e.preventDefault();links.forEach(n=>n.classList.remove('active'));a.classList.add('active');iframe.src=a.dataset.target;}));
-const toast=(m)=>{const t=document.getElementById('toast');t.textContent=m;t.classList.add('show');setTimeout(()=>t.classList.remove('show'),2000);};
-document.getElementById('btn-save-cloud').onclick=async()=>{try{
-  const customer=JSON.parse(localStorage.getItem('dfs.customer')||'null');
-  const contracts=JSON.parse(localStorage.getItem('dfs.contracts')||'null');
-  const analysis=JSON.parse(localStorage.getItem('dfs.analysis')||'null');
-  await saveAllDFSBlobs({customer,contracts,analysis}); toast('In Cloud gespeichert');
-}catch(e){console.error(e); toast('Fehler beim Speichern');}};
-document.getElementById('btn-load-cloud').onclick=async()=>{try{
-  const {customer,contracts,analysis}=await loadAllDFSBlobs();
-  if(customer) localStorage.setItem('dfs.customer',JSON.stringify(customer));
-  if(contracts) localStorage.setItem('dfs.contracts',JSON.stringify(contracts));
-  if(analysis) localStorage.setItem('dfs.analysis',JSON.stringify(analysis));
-  toast('Aus Cloud geladen');
-}catch(e){console.error(e); toast('Fehler beim Laden');}};
-</script>
-</body></html>
+
+      <!-- SHELL-NAVIGATION -->
+      <nav class="nav">
+        <a href="#" class="active" data-target="./modules/dashboard/index.html">Dashboard</a>
+        <a href="#" data-target="./modules/customers/index.html">Kunden (Liste)</a>
+        <a href="#" data-target="./modules/customer/index.html">Kunden (Editor)</a>
+        <a href="#" data-target="./modules/contracts/index.html">Verträge</a>
+        <a href="#" data-target="./modules/analysis/index.html">Analyse</a>
+        <a href="#" data-target="./modules/print/index.html">PDF-Export</a>
+      </nav>
+
+      <div style="margin-top:auto">
+        <small style="color:var(--muted)">Version <span id="ver">1.3.0</span> – Björn Weber</small>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="topbar">
+        <div style="display:flex;gap:8px;align-items:center">
+          <button class="btn" id="btn-save-cloud">In Cloud speichern</button>
+          <button class="btn outline" id="btn-load-cloud">Aus Cloud laden</button>
+        </div>
+        <div>
+          <button class="btn outline" onclick="window.print()">Als PDF speichern</button>
+        </div>
+      </div>
+
+      <iframe id="content" src="./modules/dashboard/index.html"></iframe>
+    </main>
+  </div>
+
+  <!-- Toast -->
+  <div id="toast" class="toast">OK</div>
+
+  <!-- Firebase + Bridge -->
+  <script type="module" src="./scripts/firebaseClient.js"></script>
+  <script type="module" src="./scripts/firebase.js"></script>
+
+  <!-- Shell-Logik -->
+  <script type="module">
+    import { saveAllDFSBlobs, loadAllDFSBlobs } from './scripts/firebase.js';
+
+    const iframe = document.getElementById('content');
+    const links  = document.querySelectorAll('.nav a');
+
+    // Navigation: lädt Zielseite ins iframe + Active-State
+    links.forEach(a => a.addEventListener('click', (e) => {
+      e.preventDefault();
+      links.forEach(n => n.classList.remove('active'));
+      a.classList.add('active');
+      iframe.src = a.dataset.target;
+    }));
+
+    // Toast helper
+    const toast = (msg) => {
+      const t = document.getElementById('toast');
+      t.textContent = msg;
+      t.classList.add('show');
+      setTimeout(() => t.classList.remove('show'), 2000);
+    };
+
+    // Cloud: speichert/lädt die drei Hauptblobs
+    document.getElementById('btn-save-cloud').addEventListener('click', async () => {
+      try {
+        const customer  = JSON.parse(localStorage.getItem('dfs.customer')  || 'null');
+        const contracts = JSON.parse(localStorage.getItem('dfs.contracts') || 'null');
+        const analysis  = JSON.parse(localStorage.getItem('dfs.analysis')  || 'null');
+        await saveAllDFSBlobs({ customer, contracts, analysis });
+        toast('In Cloud gespeichert');
+      } catch (e) {
+        console.error(e); toast('Fehler beim Speichern');
+      }
+    });
+
+    document.getElementById('btn-load-cloud').addEventListener('click', async () => {
+      try {
+        const { customer, contracts, analysis } = await loadAllDFSBlobs();
+        if (customer)  localStorage.setItem('dfs.customer',  JSON.stringify(customer));
+        if (contracts) localStorage.setItem('dfs.contracts', JSON.stringify(contracts));
+        if (analysis)  localStorage.setItem('dfs.analysis',  JSON.stringify(analysis));
+        toast('Aus Cloud geladen');
+      } catch (e) {
+        console.error(e); toast('Fehler beim Laden');
+      }
+    });
+  </script>
+</body>
+</html>
