--- a/modules/customer/index.html
+++ b/modules/customer/index.html
@@ -7,6 +7,7 @@
   <style>
     .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px}
     @media (max-width:720px){.grid{grid-template-columns:1fr}}
+    pre.preview{white-space:pre-wrap;background:rgba(255,255,255,.06);border:1px solid var(--card-bd);border-radius:12px;padding:12px;max-height:240px;overflow:auto}
   </style>
   <script>
     // no module needed for simple qs helper
@@ -21,15 +22,20 @@
       <div><label class="label">Ansprechpartner</label><input class="input" id="ansprech"></div>
       <div><label class="label">E‑Mail</label><input class="input" id="email" type="email"></div>
       <div><label class="label">Telefon</label><input class="input" id="telefon"></div>
-      <div><label class="label">Straße</label><input class="input" id="strasse"></div>
-      <div><label class="label">PLZ</label><input class="input" id="plz"></div>
-      <div><label class="label">Ort</label><input class="input" id="ort"></div>
-      <div style="grid-column:1/-1"><label class="label">Notizen</label><textarea class="input" id="notizen" rows="4"></textarea></div>
+      <div><label class="label">Branche (optional)</label><input class="input" id="branche"></div>
+      <div><label class="label">Mitarbeiter (optional)</label><input class="input" id="mitarbeiter" type="number" step="1" min="0"></div>
+      <div><label class="label">Umsatz in € (optional)</label><input class="input" id="umsatz" type="number" step="0.01" min="0"></div>
+      <div><label class="label">Gründungsjahr (optional)</label><input class="input" id="gruendung" type="number" step="1" min="0"></div>
+      <div style="grid-column:1/-1"><label class="label">Standort (optional)</label><input class="input" id="standort"></div>
     </div>
     <div style="display:flex;gap:8px;margin-top:12px;flex-wrap:wrap">
       <button class="btn" id="save">Speichern</button>
       <button class="btn outline" id="delete" style="display:none">Löschen</button>
       <a class="btn outline" href="../customers/index.html">Zur Liste</a>
+    </div>
+    <div class="card" style="margin-top:12px">
+      <div class="label">Key im Browser: dfs.customers</div>
+      <pre id="preview" class="preview">[]</pre>
     </div>
   </div>
   <script type="module">
@@ -38,23 +44,28 @@
     const $=id=>document.getElementById(id);
     function getLocal(){ try{ return JSON.parse(localStorage.getItem(KEY)||'[]'); }catch{ return []; } }
     function setLocal(a){ localStorage.setItem(KEY, JSON.stringify(a)); }
-    function fill(c){ if(!c) return; ['firma','ansprech','email','telefon','strasse','plz','ort','notizen'].forEach(k=>{ const el=$(k); if(el) el.value=c[k]||''; }); }
+    function renderPreview(){ const arr=getLocal(); $('preview').textContent = JSON.stringify(arr, null, 2); }
+    function fill(c){ if(!c) return; ['firma','ansprech','email','telefon','branche','mitarbeiter','umsatz','gruendung','standort'].forEach(k=>{ const el=$(k); if(!el) return; const v=c[k]; el.value = (v===undefined||v===null)? '' : String(v); }); }
+    const genId = () => (crypto && typeof crypto.randomUUID==='function') ? crypto.randomUUID() : `${Date.now()}-${Math.random().toString(36).slice(2)}`;
     let id = window._qs.get('id') || null;
+    if(!id){ id = genId(); }
     let list = getLocal();
-    let current = id ? list.find(x=>x.id===id) : null;
+    let current = window._qs.get('id') ? list.find(x=>x.id===id) : null;
     if(current){ $('delete').style.display='inline-block'; }
     fill(current);
+    function toNum(v){ const n = Number(v); return Number.isFinite(n) ? n : undefined; }
     function collect(){
       return {
-        id: id || (crypto.randomUUID?crypto.randomUUID():`${Date.now()}-${Math.random().toString(36).slice(2)}`),
+        id,
         firma: $('firma').value.trim(),
         ansprech: $('ansprech').value.trim(),
         email: $('email').value.trim(),
         telefon: $('telefon').value.trim(),
-        strasse: $('strasse').value.trim(),
-        plz: $('plz').value.trim(),
-        ort: $('ort').value.trim(),
-        notizen: $('notizen').value.trim(),
+        branche: $('branche').value.trim() || undefined,
+        mitarbeiter: toNum($('mitarbeiter').value),
+        umsatz: toNum($('umsatz').value),
+        gruendung: toNum($('gruendung').value),
+        standort: $('standort').value.trim() || undefined,
         updatedAt: new Date().toISOString(),
         createdAt: current?.createdAt || new Date().toISOString()
       };
@@ -66,7 +77,8 @@
       if(idx>=0) arr[idx]=c; else arr.push(c);
       setLocal(arr);
       try{ await saveCustomerToCloud(c); }catch(e){ console.warn('Cloud save failed', e); }
-      if(!id){ id=c.id; history.replaceState({},'',`?id=${encodeURIComponent(id)}`); $('delete').style.display='inline-block'; }
+      if(!window._qs.get('id')){ history.replaceState({},'',`?id=${encodeURIComponent(id)}`); $('delete').style.display='inline-block'; }
+      renderPreview();
       alert('Gespeichert');
     };
     document.getElementById('delete').onclick = async ()=>{
@@ -77,6 +89,7 @@
       try{ await deleteCustomerFromCloud(id); }catch(e){ console.warn('Cloud delete failed', e); }
       location.href = '../customers/index.html';
     };
+    renderPreview();
   </script>
 </body>
 </html>
