--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -7,196 +7,68 @@
   <link rel="stylesheet" href="../../styles/base.css">
   <style>
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-    .right{text-align:right}
+    @media(max-width:900px){.grid{grid-template-columns:1fr}}
     .toolbar{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
+    .chip{display:inline-flex;align-items:center;gap:6px;background:var(--card-bg);border:1px solid var(--card-bd);border-radius:999px;padding:6px 10px;margin:0 6px 6px 0}
+    .chip input{accent-color:var(--gold)}
+    .right{text-align:right}
   </style>
 </head>
 <body>
   <div class="card">
-    <h2>Verträge & Sparten</h2>
+    <h2>Verträge</h2>
     <div class="grid">
-      <div><label class="label">Versicherer</label><input class="input" id="versicherer"></div>
-      <div><label class="label">Police-Nr.</label><input class="input" id="police"></div>
-      <div><label class="label">Produkt (optional)</label><input class="input" id="produkt"></div>
+      <div>
+        <label class="label">Versicherer</label>
+        <input class="input" id="c-insurer" list="insurer-list">
+        <datalist id="insurer-list"></datalist>
+      </div>
+      <div><label class="label">Police-Nr.</label><input class="input" id="c-policy"></div>
+      <div><label class="label">Produkt (optional)</label><input class="input" id="c-product"></div>
 
-      <div><label class="label">Sparte(n) (Komma)</label><input class="input" id="sparten" placeholder="BHV, Inhalt, Cyber"></div>
-      <div><label class="label">Beginn</label><input class="input" id="beginn" type="date"></div>
-      <div><label class="label">Zahlweise</label>
-        <select class="input" id="zahlweise">
-          <option>jährlich</option><option>halbjährlich</option><option>vierteljährlich</option><option>monatlich</option>
-        </select>
+      <div style="grid-column:1/-1">
+        <label class="label">Risiken / Sparten</label>
+        <div id="risk-boxes"></div>
       </div>
 
-      <div><label class="label">Jahresbeitrag (Brutto, €)</label><input class="input" id="beitrag" type="number" step="0.01"></div>
-      <div><label class="label">Deckungssumme (€, optional)</label><input class="input" id="deckung" type="number" step="1"></div>
-      <div><label class="label">Selbstbehalt (€, optional)</label><input class="input" id="sb" type="number" step="1"></div>
+      <div><label class="label">Beginn</label><input class="input" id="c-start" type="date"></div>
+      <div><label class="label">Zahlweise</label><select class="input" id="c-freq"></select></div>
+      <div><label class="label">Jahresbeitrag (€)</label><input class="input" id="c-premium" type="number" step="0.01" min="0"></div>
+
+      <div><label class="label">Deckungssumme (€)</label><input class="input" id="c-coverage" type="number" step="1" min="0"></div>
+      <div><label class="label">Selbstbehalt (€)</label><input class="input" id="c-deductible" type="number" step="1" min="0"></div>
+      <div><label class="label">Notizen</label><input class="input" id="c-notes"></div>
     </div>
 
     <div class="toolbar">
-      <button class="btn" id="add">Vertrag hinzufügen</button>
-      <button class="btn outline" id="export">Export (JSON)</button>
-      <input type="file" id="import" accept=".json" style="display:none">
-      <button class="btn outline" id="importBtn">Import</button>
-      <button class="btn outline" id="cloud-sync">Cloud laden</button>
+      <button class="btn" id="btn-add">Vertrag hinzufügen</button>
+      <button class="btn outline" id="btn-export">Export (JSON)</button>
+      <button class="btn outline" id="btn-import">Import</button>
+      <input type="file" id="file-import" accept=".json" style="display:none">
+      <button class="btn outline" id="btn-save-cloud">In Cloud speichern</button>
+      <button class="btn outline" id="btn-load-cloud">Aus Cloud laden</button>
     </div>
 
     <div class="card" style="margin-top:12px">
-      <table id="tbl">
+      <table id="contracts-table">
         <thead>
           <tr>
-            <th>Versicherer</th><th>Police</th><th>Sparten</th><th class="right">Beitrag (€/J)</th><th>Aktion</th>
+            <th>Versicherer</th>
+            <th>Police</th>
+            <th>Risiken</th>
+            <th>Zahlweise</th>
+            <th class="right">Beitrag (€/J)</th>
+            <th>Aktion</th>
           </tr>
         </thead>
         <tbody></tbody>
         <tfoot>
-          <tr><td colspan="3"><strong>Summe</strong></td><td class="right" id="sum">0,00 €</td><td></td></tr>
+          <tr><td colspan="4"><strong>Summe</strong></td><td class="right" id="sum-cell">0,00 €</td><td></td></tr>
         </tfoot>
       </table>
     </div>
   </div>
 
-  <script type="module">
-    import { saveContractToCloud, loadContractsFromCloud, deleteContractFromCloud } from '../../scripts/firebase.js';
-
-    const KEY='dfs.contracts';
-    const $=id=>document.getElementById(id);
-    const fmt=(n)=> (Number(n)||0).toLocaleString('de-DE',{style:'currency',currency:'EUR'});
-
-    const defaults = {
-      empfehlungen: [
-        "Versicherungssumme prüfen",
-        "Erhöhung Versicherungssumme",
-        "Rückwirkungsschäden Zulieferer/Abnehmer mitversichert",
-        "Vertragsstrafen bis 1,5 Mio. € mitversichert",
-        "Viele Deckungserweiterungen",
-        "Umstellung ins neue Tarifwerk prüfen"
-      ]
-    };
-
-    function getLocal(){ try{ return JSON.parse(localStorage.getItem(KEY)||'[]'); }catch{ return []; } }
-    function setLocal(arr){ localStorage.setItem(KEY, JSON.stringify(arr)); }
-
-    function render(){
-      const list=getLocal();
-      const tbody=document.querySelector('#tbl tbody');
-      tbody.innerHTML = list.map(c=>`
-        <tr>
-          <td>${c.versicherer||''}</td>
-          <td>${c.policeNr||''}</td>
-          <td>${(c.sparten||[]).join(', ')}</td>
-          <td class="right">${fmt(c.jahresbeitragBrutto||0)}</td>
-          <td>
-            <button class="btn outline" data-id="${c.id}" data-action="edit">Bearb.</button>
-            <button class="btn outline del" data-id="${c.id}">Löschen</button>
-          </td>
-        </tr>
-      `).join('');
-
-      const sum=list.reduce((a,c)=>a+(Number(c.jahresbeitragBrutto)||0),0);
-      document.getElementById('sum').textContent = fmt(sum);
-
-      document.querySelectorAll('.del').forEach(b=> b.onclick = async ()=>{
-        const id=b.getAttribute('data-id');
-        const next=list.filter(x=>x.id!==id);
-        setLocal(next);
-        try{ await deleteContractFromCloud(id); }catch(e){ console.warn('cloud delete failed', e); }
-        render();
-        recomputeAnalysis();
-      });
-
-      document.querySelectorAll('[data-action="edit"]').forEach(b=> b.onclick = ()=>{
-        const id=b.getAttribute('data-id');
-        const c=list.find(x=>x.id===id);
-        if(!c) return;
-        $('versicherer').value=c.versicherer||'';
-        $('police').value=c.policeNr||'';
-        $('produkt').value=c.produkt||'';
-        $('sparten').value=(c.sparten||[]).join(', ');
-        $('beginn').value=c.beginn||'';
-        $('zahlweise').value=c.zahlweise||'jährlich';
-        $('beitrag').value=c.jahresbeitragBrutto||'';
-        $('deckung').value=c.deckungssumme||'';
-        $('sb').value=c.selbstbehalt||'';
-        window.__editId = id;
-        window.scrollTo({top:0,behavior:'smooth'});
-      });
-    }
-
-    async function syncFromCloud(){
-      const cloud = await loadContractsFromCloud();
-      const map = new Map(getLocal().map(x=>[x.id,x]));
-      cloud.forEach(c=> map.set(c.id, {...map.get(c.id), ...c}));
-      setLocal(Array.from(map.values()));
-      render();
-      recomputeAnalysis();
-      alert('Clouddaten geladen');
-    }
-
-    function recomputeAnalysis(){
-      const contracts = getLocal();
-      const warnings=[], recommendations=[];
-      const sparten = new Set(contracts.flatMap(c=>c.sparten||[]).map(s=>s.toLowerCase()));
-      const find = (name)=> contracts.filter(c=> (c.sparten||[]).map(s=>s.toLowerCase()).includes(name.toLowerCase()));
-      find('BHV').forEach(c=>{ if((c.deckungssumme||0) < 5_000_000) warnings.push('BHV Deckungssumme < 5 Mio.'); });
-      find('Inhalt').forEach(c=>{ if((c.gefahren||[]).length < 3) warnings.push('Inhalt: weniger als 3 Gefahren'); });
-      find('Gebäude').forEach(c=>{ if((c.gefahren||[]).length < 3) warnings.push('Gebäude: weniger als 3 Gefahren'); });
-      const cyber = find('Cyber'); if(cyber.length && !cyber.some(c=> (c.gefahren||[]).length>0)) warnings.push('Cyber vorhanden, aber keine Bausteine');
-      if(!sparten.has('cyber')) recommendations.push('Cyber ergänzen …');
-      if(!sparten.has('ertragsausfall') && !sparten.has('bu')) recommendations.push('Betriebsunterbrechung absichern');
-      if(!sparten.has('rechtsschutz')) recommendations.push('Rechtsschutz prüfen …');
-      const sumAnnual = contracts.reduce((a,c)=>a+(Number(c.jahresbeitragBrutto)||0),0);
-      const targetPct = Number(localStorage.getItem('dfs.targetSavingsPct')||'15');
-      const monthlySaving = (sumAnnual - (sumAnnual*(1 - targetPct/100)))/12;
-      const riskScore = Math.max(5, 95 - 10*warnings.length);
-      const a = { warnings, recommendations, sumAnnual, targetPct, monthlySaving, riskScore, ts:new Date().toISOString() };
-      localStorage.setItem('dfs.analysis', JSON.stringify(a));
-    }
-
-    document.getElementById('add').onclick = async ()=>{
-      const id = window.__editId || (crypto.randomUUID? crypto.randomUUID() : `${Date.now()}-${Math.random().toString(36).slice(2)}`);
-      const c = {
-        id,
-        versicherer: $('versicherer').value.trim(),
-        policeNr: $('police').value.trim(),
-        produkt: $('produkt').value.trim() || undefined,
-        sparten: $('sparten').value ? $('sparten').value.split(',').map(s=>s.trim()).filter(Boolean) : [],
-        beginn: $('beginn').value || undefined,
-        zahlweise: $('zahlweise').value,
-        jahresbeitragBrutto: Number($('beitrag').value)||0,
-        deckungssumme: Number($('deckung').value)||undefined,
-        selbstbehalt: Number($('sb').value)||undefined,
-        gefahren: [],
-        empfehlungen: defaults.empfehlungen,
-        createdAt: new Date().toISOString(),
-        updatedAt: new Date().toISOString()
-      };
-      const list=getLocal();
-      const idx=list.findIndex(x=>x.id===id);
-      if(idx>=0) list[idx]=c; else list.push(c);
-      setLocal(list);
-      try{ await saveContractToCloud(c); }catch(e){ console.warn('Cloud save failed', e); }
-      window.__editId = null;
-      ['versicherer','police','produkt','sparten','beginn','beitrag','deckung','sb'].forEach(k=>{ const el=$(k); if(el) el.value=''; });
-      $('zahlweise').value='jährlich';
-      render();
-      recomputeAnalysis();
-    };
-
-    document.getElementById('export').onclick = ()=>{
-      const data = localStorage.getItem(KEY)||'[]';
-      const blob = new Blob([data], {type:'application/json'});
-      const a = document.createElement('a'); a.href = URL.createObjectURL(blob); a.download = 'dfs_contracts.json'; a.click();
-    };
-    document.getElementById('importBtn').onclick = ()=> document.getElementById('import').click();
-    document.getElementById('import').onchange = (e)=>{
-      const f=e.target.files[0]; if(!f) return;
-      const r=new FileReader(); r.onload=()=>{
-        try{ const arr=JSON.parse(r.result||'[]'); if(Array.isArray(arr)){ setLocal(arr); render(); recomputeAnalysis(); alert('Import erfolgreich'); } }
-        catch{ alert('Import fehlgeschlagen'); }
-      }; r.readAsText(f);
-    };
-    document.getElementById('cloud-sync').onclick = syncFromCloud;
-    render(); recomputeAnalysis();
-  </script>
+  <script type="module" src="./contracts.js"></script>
 </body>
 </html>
