--- a/index.html
+++ b/index.html
@@ -95,16 +95,6 @@
     const iframe = document.getElementById('content');
     const links  = document.querySelectorAll('.nav a');
 
-    // Navigation: lädt Zielseite ins iframe + Active-State
-    links.forEach(a => a.addEventListener('click', (e) => {
-      e.preventDefault();
-      links.forEach(n => n.classList.remove('active'));
-      a.classList.add('active');
-      iframe.src = withVersion(a.dataset.target);
-      // Gruppen-Highlight aktualisieren
-      updateGroupActive();
-    }));
-
     function updateGroupActive(){
       document.querySelectorAll('.nav-group').forEach(g => {
         const sub = g.nextElementSibling;
@@ -112,6 +102,22 @@
         g.classList.toggle('active', isActive);
       });
     }
+
+    function navigateTo(target){
+      links.forEach(n => n.classList.remove('active'));
+      const link = Array.from(links).find(n => n.dataset.target === target);
+      if (link) link.classList.add('active');
+      iframe.src = withVersion(target);
+      updateGroupActive();
+    }
+    window.navigateTo = navigateTo;
+
+    // Navigation: lädt Zielseite ins iframe + Active-State
+    links.forEach(a => a.addEventListener('click', (e) => {
+      e.preventDefault();
+      navigateTo(a.dataset.target);
+    }));
+
     // initialer Zustand
     updateGroupActive();
 
