feat(contracts): add term + endDate + reminder (3m before)

--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -32,6 +32,13 @@
       </div>
 
       <div><label class="label">Beginn</label><input class="input" id="c-start" type="date"></div>
+      <div><label class="label" for="c-term">Laufzeit</label>
+        <select class="input" id="c-term">
+          <option value="3" selected>3 Jahre</option>
+          <option value="5">5 Jahre</option>
+        </select>
+      </div>
+      <div><label class="label" for="c-enddate">Enddatum</label><input class="input" id="c-enddate" type="date" readonly></div>
       <div><label class="label">Zahlweise</label><select class="input" id="c-freq"></select></div>
       <div><label class="label">Jahresbeitrag (€)</label><input class="input" id="c-premium" type="number" step="0.01" min="0"></div>
 
@@ -57,13 +64,15 @@
             <th>Police</th>
             <th>Risiken</th>
             <th>Zahlweise</th>
+            <th>Enddatum</th>
+            <th>Reminder</th>
             <th class="right">Beitrag (€/J)</th>
             <th>Aktion</th>
           </tr>
         </thead>
         <tbody></tbody>
         <tfoot>
-          <tr><td colspan="4"><strong>Summe</strong></td><td class="right" id="sum-cell">0,00 €</td><td></td></tr>
+          <tr><td colspan="6"><strong>Summe</strong></td><td class="right" id="sum-cell">0,00 €</td><td></td></tr>
         </tfoot>
       </table>
     </div>
